--- a/doc/cie/logic.tex
+++ b/doc/cie/logic.tex
@@ -140,11 +140,10 @@ introduction and elimination constructs. For product sets we have
 tuples and projections ($\iproj{\ie}{1}$, $\iproj{\ie}{2}$, \ldots),
 and for function spaces we have lambda abstractions and application.
 One can inject a term into a tagged disjoin union, or do case analyses
-on the members of a union. We can produce the equivalence class of a
-given term, or pick a representative of a given equivalence class (as
+on the members of a union. We can produce the equivalence class or pick a representative of a given equivalence class (as
 long as what we do with it does not depend on the particular
-representative). Very similarly, we can produce the set of realizers
-for a term, or choose a representative from a given set of realizers
+representative). Very similarly, we can produce a set of realizers
+or choose a representative from a given set of realizers
 (as long as what we do with it does not depend on the particular
 representative). We can inject a term into a subset (if it satisfies
 the appropriate predicate), or project an element of a subset into the
