--- a/doc/cie/cie.tex
+++ b/doc/cie/cie.tex
@@ -54,7 +54,7 @@
 
 % Use these environents to display input and otput in LaTeXified mode
 \newenvironment{showInput}{\[\begin{array}{l}}{\end{array}\]}
-\newenvironment{showInputSmall}{\footnotesize\[\begin{array}{l}}{\end{array}\]}
+\newenvironment{showInputSmall}{{}\footnotesize\[\begin{array}{l}}{\end{array}\]}}
 
 \newenvironment{showOutput}{\[\begin{array}{l}}{\end{array}\]}
 \newenvironment{showOutputSmall}{\footnotesize\[\begin{array}{l}}{\end{array}\]}
