--- a/doc/cie/modest_sets.tex
+++ b/doc/cie/modest_sets.tex
@@ -47,17 +47,22 @@ Thus we define the datatype of graphs as\footnote{We use OCaml
 However, this is not a complete description of the representation, as
 there would be representation invariants and conditions not expressed by the type, e.g.,
 %
+\iflong
 \begin{enumerate}
 \item The order in which vertices and arrows are listed is not
   important%
-\iflong
 ; for example, $[1;2;3;4]$ and $[4;1;2;3]$ represent the same vertices.\footnote{
   A different implementation with the same representation type could require
   that only sorted vertex lists are legal.}
-\fi %\iflong
 \item Each vertex and arrow must be listed exactly once.
 \item The source and target of each arrow must appear in the list of vertices.
 \end{enumerate}
+\else % \iflong
+the order in which vertices and arrows are listed is not
+important, each vertex and arrow must be listed exactly once, and
+the source and target of each arrow must appear in the list of vertices.
+\fi %\iflong
+
 %
 Thus, to implement the mathematical set~$\mathcal{G}$, we must not
 only decide on the underlying datatype $\mathtt{graph}$, but also
@@ -92,8 +97,9 @@ on different invocations.  They may \emph{use} exceptions,
 store, and other computational effects, provided they appear
 functional from the outside; a useful example using computational effects is
 presented in Section~\ref{sec:we-show-modulus-of-continuity-example}.
-Note also that a functional value with a function type may diverge as
-soon as it is applied.   The collection $\Type$ with the assignment of functional
+A functional value of function type may diverge as
+soon as it is applied.
+   The collection $\Type$ with the assignment of functional
 values $\values{t}$ to each $t \in \Type$ forms a \emph{typed partial
   combinatory algebra (TPCA)}, which provides a theoretical basis for
 the definition of a realizability model that suits our needs.
@@ -190,16 +196,12 @@ $x \in \setOf{A}$ and $u \in \typeOf{A}$,
 %
 \iflong
 \begin{equation}
-\else %\iflong
-$
-\fi %\iflong
-  \label{eq:rz-function-space}
-  u \rz_A x \implies v\;u \rz_B f(x) \;.
-\iflong
+	  \label{eq:rz-function-space}
+	  u \rz_A x \implies v\;u \rz_B f(x) \;.
 \end{equation}
-\else % \iflong
-$
-\fi
+\else
+$u \rz_A x \implies v\;u \rz_B f(x) \;.$
+\fi % \iflong
 %
 This condition is just a mathematical expression of the usual idea
 that~$v$ is an implementation of~$f$ if it does to realizers
