--- a/doc/cie/translation.tex
+++ b/doc/cie/translation.tex
@@ -141,7 +141,7 @@ those constructions of terms that are not entirely straightforward.
 %
 \else
 %
-We comment on those that are not completely standard.
+We comment on those that are least familiar.
 %
 \fi
 
@@ -176,6 +176,7 @@ it makes sense computationally.
 \fi % \iflong
 Given a modest sets~$A$ and a
 predicate~$\phi$ on~$A$, the modest subset $\set{x : A \such \phi(x)}$
+\iflong
 has the underlying set
 %
 \begin{equation*}
@@ -191,16 +192,31 @@ and the underlying type with the realizability relation
   (u,v) \rz_{\set{x : A \such \phi(x)}} x &\iff
   u \rz_A x \land v \rz \phi(x).
 \end{align*}
+\else % \iflong
+consists of 
+$\setOf{\set{x : A \such \phi(x)}} =
+\set{x \in \setOf{A} \such \xsome{v}{\typeOf{\phi}}{v \rz \phi(x)}}$,
+$\typeOf{\set{x : A \such \phi(x)}} = \typeOf{A} \times
+\typeOf{\phi}$, and
+$(u,v) \rz_{\set{x : A \such \phi(x)}} x \iff
+u \rz_A x \land v \rz \phi(x)$.
+\fi % \iflong
 %
 This means that to represent an element~$x$ of a subset we must
 provide a realizer~$u$ for the element itself, as well as~$v$
 witnessing~$\phi(x)$. The per which we get from this is
 %
+\iflong
 \begin{equation*}
   (u_1, v_1) \per_{\set{x : A \such \phi(x)}} (u_2, v_2) \iff
   v_1 \rz \phi(u_1) \land v_2 \rz \phi(u_2) \land
   u_1 \per_A u_2.
 \end{equation*}
+\else % \iflong
+$(u_1, v_1) \per_{\set{x : A \such \phi(x)}} (u_2, v_2) \iff
+v_1 \rz \phi(u_1) \land v_2 \rz \phi(u_2) \land
+u_1 \per_A u_2$.
+\fi 
 %
 A type coercion $\icoerce{e}{t}$ can convert an element of the subset $s =
 \set{x : t \such \phi(x)}$ to an element of~$t$. At the level of
@@ -221,11 +237,17 @@ on~$A$.
 %
 Given a modest set~$A$ and a stable equivalence relation~$\rho$
 on~$A$, the quotient $A/\rho$ is the modest set determined by
+\iflong
 \begin{align*}
   \setOf{A/\rho} &= \set{\ieclass{x}{\rho} \such x \in A} \\
   \typeOf{A/\rho} &= \typeOf{A} \\
   u \rz_{A/\rho} \xi &\iff \some{y}{\xi}{u \rz_A y}.
 \end{align*}
+\else % \iflong
+$\setOf{A/\rho} = \set{\ieclass{x}{\rho} \such x \in A}$,
+$\typeOf{A/\rho} = \typeOf{A}$, and
+$u \rz_{A/\rho} \xi \iff \some{y}{\xi}{u \rz_A y}$.
+\fi % \iflong
 %
 However, because equality does not carry any computational
 content, equality of equivalence classes $\ieclass{x}{\rho} =
@@ -277,15 +299,14 @@ $\forall$~formula.
 %
 \fi % iflong
 It is interesting that most practical implementations of
-real numbers follow this line of reasoning and present real numbers in
-such a way that they avoid the overhead of carrying with each sequence
-explicit information about the rate of convergence.
+real numbers follow this line of reasoning and represent real numbers to
+avoid annotating every sequence with its rate of convergence.
 
 Translation of an equivalence class $\ieclass{e}{\rho}$ is quite
 simple: since a realizer for~$e$ also realizes $\ieclass{e}{\rho}$, RZ
 uses the same realizer. The elimination term
-$\ileteclass{x}{\rho}{\xi}{e}$, which means ``let $x$ be any element
-of $\rho$-equivalence class $\xi$ in~$e$'', is trickier to translate.
+$\ileteclass{x}{\rho}{\xi}{e}$, means ``let $x$ be any element
+of $\rho$-equivalence class $\xi$ in~$e$''.
 It is only well-formed when $e$ does not depend on the choice of~$x$,
 but this is something RZ cannot check. Therefore, if $u$ realizes
 $\xi$, RZ uses $u$ as a realizer for~$x$ and emits an obligation
@@ -410,7 +431,7 @@ extensional with respect to $\per_s$.
 A basic predicate declaration $\iParameter{p}{\iarrow{s}{\iProp}}$ is
 translated to a type declaration $\otyspec{ty\_p}$ and a predicate
 declaration $\opropspec{p}{s \to ty\_p \to \oProp}$ together with
-assertions stating that~$p$ be strict and extensional.
+assertions that~$p$ is strict and extensional.
 %
 \fi % iflong
 
@@ -438,7 +459,7 @@ An axiom $\iAxiom{A}{\phi}$ in the input is translated to
 %
 which requires the programmer to validate~$\phi$ by providing a
 realizer for it. When $\phi$ is a compound statement RZ computes the
-meaning of $u \rz \phi$, as described in Figure~\ref{fig:rz-logic}.
+meaning \iflong of $u \rz \phi$\fi as described in Figure~\ref{fig:rz-logic}.
 
 
 
