--- a/doc/cie/cie.tex
+++ b/doc/cie/cie.tex
@@ -51,7 +51,9 @@
 \newcommand{\iExistsOne}{$\exists!$}
 \newcommand{\iT}[1]{$\|$#1$\|$}
 \newcommand{\iPer}[1]{$\approx_{\mathtt{#1}}$}
+\newcommand{\iIff}{$\Leftrightarrow$}
 \newcommand{\iLeq}{$\leq$}
+\newcommand{\iRz}{$\rz$}
 
 % Use these environents to display input and otput in LaTeXified mode
 \newenvironment{showInput}{\[\begin{array}{l}}{\end{array}\]}
