--- a/doc/cie/translation.tex
+++ b/doc/cie/translation.tex
@@ -6,7 +6,7 @@ Having seen the input and output languages for RZ,
 \iflong
 we now explain how the translation from one to the other works.
 \else
-we briefly review the translation from ont to the other.
+we briefly review the translation from one to the other.
 \fi
 %
 The mathematical basis for the translation procedure is the
@@ -22,113 +22,75 @@ specification, where the theory elements are translated as follows.
 
 A set declaration $\iParameter{s}{\iSet}$ is translated to
 %
-\[
-\begin{array}{ll}
-  & \otyspec{s} \\
-  & \opropspec{({\approx_{s}})}{\oarrow{s}{\oarrow{s}{\oProp}}}\\
-  & \oassertion{\mathrm{symmetric}\_{s}}{
-    \oforall{x,y}{s}{(\oimply{\oper{s}{x}{y}}{\oper{s}{y}{x}})}
-  }
-  \\
-  & \oassertion{\mathrm{transitive}\_{s}}{
-    \oforall{x,y,z}{s}{(
-      \oimply{
-        \oper{s}{x}{y} \land \oper{s}{y}{z}
-      }{\oper{s}{x}{z}}
-      )}
-  }
-\end{array}
-\]
+\begin{source}
+type s
+predicate (\iPer{s}) : s \iTo s \iTo bool
+assertion symmetric_s =  \iForall x:s, y:s, x \iPer{s} y -> y \iPer{s} x
+assertion transitive_s = \iForall x:s, y:s, z:s, x \iPer{s} y \iAnd y \iPer{s} z \iTo x \iPer{s} z
+predicate \iT{s} : s \iTo bool
+assertion total_def_s =  \iForall x:s,  x : \iT{s} \iIff x \iPer{s} x
+\end{source}
 %
 This says that the programmer should define a type~$s$ and a per
 $\per_s$ on~$\values{s}$. Here~$\per_s$ is \emph{not} an OCaml value
 of type $s \to s \to \mathtt{bool}$, but an abstract relation on the
-set $\values{s} \times \values{s}$. Only in special cases can we
-expect to be able to implement~$\per_s$ as a decidable test.  
-
+set $\values{s} \times \values{s}$.
 
 \iflong
 The translation of the declaration of a dependent set
-$\iParameter{t}{s \to \iSet}$ follows the interpretation of dependent
+$\iParameter{\f{t}}{\f{s} \to \iSet}$ follows the interpretation of dependent
 sets as uniform families (Section~\ref{sec:uniform-families}):
 %
-\[
-\begin{array}{ll}  
-  & \otyspec{t} \\
-  & \opropspec{({\approx_{t}})}{\oarrow{s}{\oarrow{t}{\oarrow{t}{\oProp}}}}\\
-  & \oassertion{\mathrm{strict}\_{t}}{
-    \oforall{x}{s}{
-      \oforall{y,z}{t}{
-        (\oimply{\oper{\oapp{t}{x}}{y}{z}}{\ototal{x}{s}})
-      }
-    }
-  } \\
-  & \oassertion{\mathrm{extensional}\_{t}}{
-    \oforall{x,y}{s}{
-      \oforall{z,w}{t}{
-        (\oimply{\oper{s}{x}{y}}{
-          \oimply{\oper{\oapp{t}{x}}{z}{w}}{\oper{\oapp{t}{y}}{z}{w}}
-        })
-      }
-    }
-  } \\
-  & \oassertion{\mathrm{symmetric}\_{t}}{
-    \oforall{x}{s}{
-      \oforall{y,z}{t}{(\oimply{\oper{\oapp{t}{x}}{y}{z}}{\oper{\oapp{t}{x}}{z}{y}})}
-    }
-  }
-  \\
-  & \oassertion{\mathrm{transitive}\_{t}}{
-    \oforall{x}{s}{
-      \oforall{y,z,w}{t}{(
-        \oimply{
-          \oper{\oapp{t}{x}}{y}{z} \land \oper{\oapp{t}{x}}{z}{w}
-        }{\oper{\oapp{t}{x}}{y}{w}}
-        )}
-    }
-  }
-\end{array}
-\]
+\begin{source}
+type t
+predicate \iPer{t} : s \iTo t \iTo t \iTo bool *)
+assertion strict_t =  \iForall x:s, y:t, z:t, y \iPer{t x} z \iTo x : ||s||
+assertion extensional_t =
+  \iForall x:s, y:s, z:t, w:t, x \iPer{s} y \iTo z \iPer{t x} w \iTo z \iPer{t y} w
+assertion symmetric_t = \iForall x:s, y:t, z:t, y \iPer{t x} z \iTo z \iPer{t x} y
+assertion transitive_t =
+  \iForall x:s, y:t, z:t, w:t, y \iPer{t x} z \iAnd z \iPer{t x} w \iTo y \iPer{t x} w
+predicate ||t|| : s \iTo t \iTo bool *)
+assertion total_def_t =  \iForall x:s, y:t, y : ||t x|| <\iTo y \iPer{t x} y
+\end{source}
 %
-The underlying output type~$t$ is still non-dependent, but the per is
-parameterized by~$s$.
+The underlying output type~$\f{t}$ is still non-dependent, but the per is
+parameterized by~$\f{s}$.
 \else % \iflong
 The translation of the declaration of a dependent set
-$\iParameter{t}{s \to \iSet}$ uses uniform families (Section~\ref{sec:uniform-families}). The
-underlying type~$t$ is non-dependent, but the per $\per_t$ receives an
-additional parameter $x : \values{s}$.
+$\iParameter{\f{t}}{\f{s} \to \iSet}$ uses uniform families
+(Section~\ref{sec:uniform-families}). The underlying type~$\f{t}$ is
+non-dependent, but the per $\per_{\f{t}}$ receives an additional
+parameter $\f{x} : \values{\f{s}}$.
 \fi % \iflong
 
 A value declaration $\iParameter{x}{s}$ is translated to
 %
-\[
-\begin{array}{ll}
-  & \ovalspec{x}{s} \\
-  & \oassertion{\mathrm{support}\_x}{\ototal{x}{s}}
-\end{array}
-\]
+\begin{source}
+val x : s
+assertion x_support = x : \iT{s}
+\end{source}
 %
-which requires the definition of a value~$x$ of type~$s$ which is in
-the support of~$s$.
+which requires the definition of a value~$\f{x}$ of type~$\f{s}$ which is in
+the support of~$\f{s}$.
 \iflong
-When $s$ is not a basic set, RZ computes the
+When $\f{s}$ is not a basic set, RZ computes the
 interpretation of the underlying type and support.
 \fi
 
-A value definition $\iDefinition{x}{e}$ where~$e$ is an expression
-denoting an element of~$s$ is translated to
+A value definition $\iDefinition{\f{x}}{e}$ where~$e$ is an expression
+denoting an element of~$\f{s}$ is translated to
 %
-\[
-\begin{array}{ll}
-  & \ovalspec{x}{s} \\
-  & \oassertion{x\_\mathrm{def}}{\oper{s}{x}{e}}
-\end{array}
-\]
+\newcommand{\iE}{$e$}
+\begin{source}
+val x : s
+assertion x_def =  x \iPer{s} \iE
+\end{source}
 %
-The assertion does \emph{not} force~$x$ to be defined as~$e$, only to
-be equivalent to it with respect to~$\per_s$. This is welcome, as
-often the easiest way to define a value is not the most efficient
-way to compute it.
+The assertion does \emph{not} force~$\f{x}$ to be defined as~$e$, only
+to be equivalent to it with respect to~$\per_{\f{s}}$. This is
+welcome, as often the easiest way to define a value is not the most
+efficient way to compute it.
 
 Constructions of sets in the input language are translated to
 corresponding constructions of modest sets.
@@ -171,12 +133,10 @@ that we have
 \paragraph{Subsets.}
 %
 \iflong
+%
 The construction of modest subsets may look surprising at first, but
-it makes sense computationally.
-\fi % \iflong
-Given a modest sets~$A$ and a
+it makes sense computationally. Given a modest sets~$A$ and a
 predicate~$\phi$ on~$A$, the modest subset $\set{x : A \such \phi(x)}$
-\iflong
 has the underlying set
 %
 \begin{equation*}
@@ -192,32 +152,27 @@ and the underlying type with the realizability relation
   (u,v) \rz_{\set{x : A \such \phi(x)}} x &\iff
   u \rz_A x \land v \rz \phi(x).
 \end{align*}
-\else % \iflong
-consists of 
-$\setOf{\set{x : A \such \phi(x)}} =
-\set{x \in \setOf{A} \such \xsome{v}{\typeOf{\phi}}{v \rz \phi(x)}}$,
-$\typeOf{\set{x : A \such \phi(x)}} = \typeOf{A} \times
-\typeOf{\phi}$, and
-$(u,v) \rz_{\set{x : A \such \phi(x)}} x \iff
-u \rz_A x \land v \rz \phi(x)$.
-\fi % \iflong
 %
 This means that to represent an element~$x$ of a subset we must
 provide a realizer~$u$ for the element itself, as well as~$v$
 witnessing~$\phi(x)$. The per which we get from this is
 %
-\iflong
 \begin{equation*}
   (u_1, v_1) \per_{\set{x : A \such \phi(x)}} (u_2, v_2) \iff
   v_1 \rz \phi(u_1) \land v_2 \rz \phi(u_2) \land
   u_1 \per_A u_2.
 \end{equation*}
-\else % \iflong
-$(u_1, v_1) \per_{\set{x : A \such \phi(x)}} (u_2, v_2) \iff
-v_1 \rz \phi(u_1) \land v_2 \rz \phi(u_2) \land
-u_1 \per_A u_2$.
-\fi 
 %
+\else
+Given a predicate~$\phi$ on a per~$A$, the sub-per $\set{x : A
+  \such \phi}$ has underlying type $\typeOf{A} \times \typeOf{\phi}$
+where $(u_1,v_1) \per_{\set{x : A \such \phi}} (u_2,v_2)$ when $u_1
+\per_A u_2$, $v_1 \rz \phi(u_1)$ and $v_2 \rz \phi(u_2)$. The point is
+that a realizer for an element of $\set{x : A
+  \such \phi}$ carries information about \emph{why} the element
+belongs to the subset.
+\fi
+
 A type coercion $\icoerce{e}{t}$ can convert an element of the subset $s =
 \set{x : t \such \phi(x)}$ to an element of~$t$. At the level of
 realizers this is achieved by the first projection, which keeps a
@@ -231,31 +186,40 @@ a~$v$ which validates~$\phi(e')$, it emits an obligation $(u,
 
 \paragraph{Quotients.}
 %
+\iflong
+%
 The category of modest sets has coequalizers, hence a quotient modest
 set $A/\rho$ may be constructed for an any equivalence relation~$\rho$
-on~$A$. 
-%
-Given a modest set~$A$ and a stable equivalence relation~$\rho$
-on~$A$, the quotient $A/\rho$ is the modest set determined by
-\iflong
-\begin{align*}
-  \setOf{A/\rho} &= \set{\ieclass{x}{\rho} \such x \in A} \\
-  \typeOf{A/\rho} &= \typeOf{A} \\
-  u \rz_{A/\rho} \xi &\iff \some{y}{\xi}{u \rz_A y}.
-\end{align*}
-\else % \iflong
-$\setOf{A/\rho} = \set{\ieclass{x}{\rho} \such x \in A}$,
-$\typeOf{A/\rho} = \typeOf{A}$, and
-$u \rz_{A/\rho} \xi \iff \some{y}{\xi}{u \rz_A y}$.
-\fi % \iflong
-%
-However, because equality does not carry any computational
+on~$A$. However, because equality does not carry any computational
 content, equality of equivalence classes $\ieclass{x}{\rho} =
 \ieclass{y}{\rho}$ implies only $\inot{\inot{\rho(x,y)}}$, not the
 usual~$\rho(x,y)$. Because this may cause a great deal of confusion
 and mistakes, it is better to permit only quotients by \emph{stable}
 equivalence relations, which behave as expected.
+
+Given a modest set~$A$ and a stable equivalence relation~$\rho$
+on~$A$, the quotient $A/\rho$ is the modest set determined by
+\begin{align*}
+  \setOf{A/\rho} &= \set{\ieclass{x}{\rho} \such x \in A} \\
+  \typeOf{A/\rho} &= \typeOf{A} \\
+  u \rz_{A/\rho} \xi &\iff \some{y}{\xi}{u \rz_A y}.
+\end{align*}
 %
+\else
+%
+Even though we may form quotients of pers by arbitrary equivalence
+relations, only quotients by $\lnot\lnot$-stable relations behave as
+expected.\footnote{The trouble is that from equality of equivalence
+  classes $[x]_{\rho} = [y]_{\rho}$ we may conclude only
+  $\lnot\lnot\rho(x,y)$ rather than the expected $\rho(x,y)$.}
+%
+A stable equivalence relation on a per~$A$ is the same thing as a
+partial equivalence relation~$\rho$ on~$\typeOf{A}$ which satisfies
+$\rho(x,y) \implies x \per_A y$. Then the quotient $A/\rho$ is the per
+with $\typeOf{A/\rho} = \typeOf{A}$ and $x \per_{A/\rho} y \iff
+\rho(x,y)$.
+%
+\fi
 
 Luckily, it seems that many equivalence relations occurring in
 computable mathematics are stable, or can be made stable with a little
@@ -303,14 +267,14 @@ real numbers follow this line of reasoning and represent real numbers to
 avoid annotating every sequence with its rate of convergence.
 
 Translation of an equivalence class $\ieclass{e}{\rho}$ is quite
-simple: since a realizer for~$e$ also realizes $\ieclass{e}{\rho}$, RZ
-uses the same realizer. The elimination term
-$\ileteclass{x}{\rho}{\xi}{e}$, means ``let $x$ be any element
-of $\rho$-equivalence class $\xi$ in~$e$''.
-It is only well-formed when $e$ does not depend on the choice of~$x$,
-but this is something RZ cannot check. Therefore, if $u$ realizes
-$\xi$, RZ uses $u$ as a realizer for~$x$ and emits an obligation
-saying that the choice of a realizer for~$x$ does not affect~$e$.
+simple: since a realizer for~$e$ also realizes its equivalence class
+$\ieclass{e}{\rho}$, RZ uses the same realizer. The elimination term
+$\ileteclass{x}{\rho}{\xi}{e}$, means ``let $x$ be any element of
+$\rho$-equivalence class $\xi$ in~$e$''. It is only well-formed when
+$e$ does not depend on the choice of~$x$, but this is something RZ
+cannot check. Therefore, if $u$ realizes $\xi$, RZ uses $u$ as a
+realizer for~$x$ and emits an obligation saying that the choice of a
+realizer for~$x$ does not affect~$e$.
 
 \paragraph{The underlying set of realizers.}
 %
@@ -391,6 +355,20 @@ realizes $\phi$'' is computationally trivial. The translation of a
 predicate $\phi$ then consists of its underlying type $\typeOf{\phi}$
 and the relation $u \rz \phi$, expressed as a negative formula.
 
+Thus an axiom $\iAxiom{\f{A}}{\phi}$ in the input is translated to
+%
+\newcommand{\iTypeOfPhi}{$|\phi|$}
+\newcommand{\iPhi}{$\phi$}
+\begin{source}
+val r : \iTypeOfPhi
+assertion A = u \iRz \iPhi
+\end{source}
+%
+which requires the programmer to validate~$\phi$ by providing a
+realizer for it. When $\phi$ is a compound statement RZ computes the
+meaning \iflong of $u \rz \phi$\fi as described in
+Figure~\ref{fig:rz-logic}.
+
 In RZ we avoid the explicit realizer notation $u \rz \phi$ in order to
 make the output easier to read.
 %
@@ -447,19 +425,6 @@ stable equivalence relations on a set~$s$. When an equivalence
 relation is declared with $\iParameter{p}{\iEquiv{s}}$, RZ will output
 assertions stating that $p$ is strict, extensional, as well as
 reflexive, symmetric and transitive.
-
-An axiom $\iAxiom{A}{\phi}$ in the input is translated to
-%
-\[
-\begin{array}{ll}
-  & \ovalspec{u}{\typeOf{\phi}} \\
-  & \oassertion{A}{u \rz \phi},
-\end{array}
-\]
-%
-which requires the programmer to validate~$\phi$ by providing a
-realizer for it. When $\phi$ is a compound statement RZ computes the
-meaning \iflong of $u \rz \phi$\fi as described in Figure~\ref{fig:rz-logic}.
 
 
 
